--- a/Toggl.Daneel/ViewControllers/Login.storyboard
+++ b/Toggl.Daneel/ViewControllers/Login.storyboard
@@ -133,7 +133,7 @@
                                     <constraint firstItem="mES-7Q-qsS" firstAttribute="leading" secondItem="Lsa-g7-i4M" secondAttribute="leading" id="fse-nY-11A"/>
                                 </constraints>
                             </view>
-                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LGF-xC-VLz">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LGF-xC-VLz">
                                 <rect key="frame" x="0.0" y="32" width="320" height="536"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Sc-8G-Q7R">
@@ -271,15 +271,16 @@
                                     <constraint firstItem="t53-NP-5k0" firstAttribute="leading" secondItem="cN3-2j-ihW" secondAttribute="leading" id="GqB-jj-c54"/>
                                     <constraint firstAttribute="trailing" secondItem="cN3-2j-ihW" secondAttribute="trailing" constant="16" id="Lpa-gf-8vy"/>
                                     <constraint firstItem="cN3-2j-ihW" firstAttribute="leading" secondItem="LGF-xC-VLz" secondAttribute="leading" constant="16" id="NoA-6H-FlV"/>
+                                    <constraint firstAttribute="bottom" secondItem="M81-7Q-VfX" secondAttribute="bottom" constant="16" id="Ub6-na-RPp"/>
                                     <constraint firstItem="2Sc-8G-Q7R" firstAttribute="leading" secondItem="uyS-pK-50z" secondAttribute="leading" id="Wzl-td-qhG"/>
+                                    <constraint firstItem="M81-7Q-VfX" firstAttribute="leading" secondItem="LGF-xC-VLz" secondAttribute="leading" constant="16" id="XpR-iy-LNh"/>
                                     <constraint firstItem="t53-NP-5k0" firstAttribute="trailing" secondItem="cN3-2j-ihW" secondAttribute="trailing" id="aVC-61-KmC"/>
+                                    <constraint firstAttribute="trailing" secondItem="M81-7Q-VfX" secondAttribute="trailing" constant="16" id="c71-mu-abt"/>
                                     <constraint firstItem="uyS-pK-50z" firstAttribute="top" secondItem="t53-NP-5k0" secondAttribute="bottom" constant="6" id="cTC-DI-kEW"/>
                                     <constraint firstItem="iDB-Xo-SZQ" firstAttribute="height" secondItem="t53-NP-5k0" secondAttribute="height" id="fld-Pb-lWA"/>
                                     <constraint firstItem="iDB-Xo-SZQ" firstAttribute="trailing" secondItem="t53-NP-5k0" secondAttribute="trailing" id="j6r-zl-4kV"/>
-                                    <constraint firstItem="M81-7Q-VfX" firstAttribute="trailing" secondItem="t53-NP-5k0" secondAttribute="trailing" id="p6V-l4-Eij"/>
                                     <constraint firstItem="uyS-pK-50z" firstAttribute="leading" secondItem="cN3-2j-ihW" secondAttribute="leading" id="r7p-Ss-i6N"/>
                                     <constraint firstItem="cN3-2j-ihW" firstAttribute="top" secondItem="LGF-xC-VLz" secondAttribute="top" id="tFY-JC-gc6"/>
-                                    <constraint firstItem="M81-7Q-VfX" firstAttribute="leading" secondItem="t53-NP-5k0" secondAttribute="leading" id="tL2-35-6fn"/>
                                 </constraints>
                             </view>
                             <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HHj-fS-xZV">
@@ -292,10 +293,10 @@
                         </subviews>
                         <color key="backgroundColor" red="0.98039215690000003" green="0.98431372549999996" blue="0.98823529409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="LGF-xC-VLz" firstAttribute="bottom" secondItem="HHj-fS-xZV" secondAttribute="top" id="7Gc-ad-IXY"/>
                             <constraint firstItem="n5i-71-xr8" firstAttribute="leading" secondItem="q4a-xJ-Vog" secondAttribute="leading" id="98F-UL-KhP"/>
                             <constraint firstItem="n5i-71-xr8" firstAttribute="top" secondItem="6xS-n8-fQk" secondAttribute="top" constant="12" id="EQF-IF-qQ8"/>
                             <constraint firstItem="6xS-n8-fQk" firstAttribute="bottom" secondItem="n5i-71-xr8" secondAttribute="bottom" id="O8D-eE-IBe"/>
-                            <constraint firstItem="HHj-fS-xZV" firstAttribute="top" secondItem="M81-7Q-VfX" secondAttribute="bottom" constant="16" id="SNv-BN-O4e"/>
                             <constraint firstItem="6xS-n8-fQk" firstAttribute="bottom" secondItem="HHj-fS-xZV" secondAttribute="bottom" id="a61-2O-HXd"/>
                             <constraint firstItem="LGF-xC-VLz" firstAttribute="top" secondItem="6xS-n8-fQk" secondAttribute="top" constant="12" id="egv-hj-7tM"/>
                             <constraint firstAttribute="trailing" secondItem="n5i-71-xr8" secondAttribute="trailing" id="f0d-1u-PfG"/>
@@ -303,7 +304,6 @@
                             <constraint firstItem="6xS-n8-fQk" firstAttribute="trailing" secondItem="LGF-xC-VLz" secondAttribute="trailing" id="iQy-sI-E7q"/>
                             <constraint firstItem="LGF-xC-VLz" firstAttribute="leading" secondItem="6xS-n8-fQk" secondAttribute="leading" id="qEZ-t3-kVj"/>
                             <constraint firstItem="HHj-fS-xZV" firstAttribute="leading" secondItem="6xS-n8-fQk" secondAttribute="leading" id="tFx-Eb-2Jm"/>
-                            <constraint firstItem="6xS-n8-fQk" firstAttribute="bottom" secondItem="LGF-xC-VLz" secondAttribute="bottom" id="y3S-87-MpN"/>
                             <constraint firstItem="6xS-n8-fQk" firstAttribute="trailing" secondItem="HHj-fS-xZV" secondAttribute="trailing" id="zqP-Sl-yZi"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6xS-n8-fQk"/>
