:construction: Forgot Password UI update (#4062)
## What's this?
Implements the new workflow for forgot password screen.

### Relationships
Implements part of #3969 

## Why do we want this?
To make it simpler for users.

## How is it done?
Not much has changed in comparison to the old one.

### Side effects
Should be none.

## Review hints
If you are testing the app functionally, know that multiple requests with the same email in short timespan will result in an error that we can't differentiate from unknown/email error, so expect a confusing message there. Until we solve the JSON ERROR API issues accross clients/BE, there's nothing we can do here.

## :squid: Permissions
🔑  people.

--- a/Toggl.Giskard/Resources/layout/ForgotPasswordActivity.axml
+++ b/Toggl.Giskard/Resources/layout/ForgotPasswordActivity.axml
@@ -1,59 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:local="http://schemas.android.com/apk/res-auto"
+<android.support.constraint.ConstraintLayout
+    android:id="@+id/RootLayout"
+    xmlns:local="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:fitsSystemWindows="true"
     android:animateLayoutChanges="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/ForgotPasswordToolbar"
-        android:elevation="0dp"
-        android:minHeight="?attr/actionBarSize"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/AppTheme.TransparentActionBar" />
+
+    <ImageView
+        android:id="@+id/BackButton"
+        local:layout_constraintTop_toTopOf="parent"
+        local:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:src="@drawable/arrow_back"
+        android:padding="4dp"
+        android:scaleType="fitCenter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/PageTitle"
+        android:text="@string/ForgotPasswordTitle"
+        android:layout_marginLeft="16dp"
+        android:textSize="19sp"
+        android:textColor="@color/pageTitleColor"
+        local:layout_constraintStart_toEndOf="@+id/BackButton"
+        local:layout_constraintTop_toTopOf="@+id/BackButton"
+        local:layout_constraintBottom_toBottomOf="@+id/BackButton"
+        android:src="@drawable/TogglRedLogoBlackText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <com.toggl.giskard.TextInputLayoutWithHelperText
-        android:id="@+id/LoginEmail"
+        android:id="@+id/EmailTextLayout"
         local:helperTextSize="12sp"
         local:helperTextColor="@color/defaultText"
         local:helperText="@string/ForgotPasswordEmailExplanation"
         local:errorTextAppearance="@style/TextInputLayoutErrorAppearance"
+        local:layout_constraintTop_toBottomOf="@+id/BackButton"
         android:hint="@string/Email"
-        android:layout_marginTop="44dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/ForgotPasswordToolbar">
-        <EditText
-            android:id="@+id/LoginEmailEditText"
+        android:layout_height="wrap_content">
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/EmailTextField"
             android:layout_width="match_parent"
             android:inputType="textEmailAddress"
             android:layout_height="match_parent">
-        </EditText>
+        </android.support.design.widget.TextInputEditText>
     </com.toggl.giskard.TextInputLayoutWithHelperText>
-    <FrameLayout
-        android:background="@color/buttonBlue"
-        android:layout_height="36dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_below="@+id/LoginEmail"
-        android:layout_width="match_parent">
-        <Button
-            android:id="@+id/ResetPasswordButton"
-            android:layout_height="36dp"
-            android:layout_width="match_parent"
-            android:background="@color/buttonBlue"
-            android:text="@string/GetPasswordResetLink"
-            android:textColor="@color/BlueButtonTextColor"
-            android:foreground="?attr/selectableItemBackground" />
-        <ProgressBar
-            android:id="@+id/LoadingProgressBar"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:indeterminateTint="@android:color/white"
-            style="?android:attr/progressBarStyleLargeInverse" />
-    </FrameLayout>
-</RelativeLayout>
+
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/NeedHelpContactUsButton"
+        local:layout_constraintStart_toStartOf="parent"
+        local:layout_constraintTop_toBottomOf="@id/EmailTextLayout"
+        android:layout_marginTop="4dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/NeedHelpContactUs"
+        android:textSize="12sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/ResetPasswordButton"
+        local:layout_constraintBottom_toBottomOf="parent"
+        local:layout_constraintEnd_toEndOf="parent"
+        local:layout_constraintStart_toEndOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:textAllCaps="false"
+        android:text="@string/GetPasswordResetLink"
+        android:textColor="#ffffff"
+        android:background="@drawable/RoundedBlueButton"
+        android:layout_width="match_parent"
+        android:layout_height="36dp" />
+
+    <ProgressBar
+        android:id="@+id/ActivityIndicator"
+        style="?android:attr/progressBarStyleLarge"
+        android:translationZ="2dp"
+        android:indeterminateTintMode="src_in"
+        android:indeterminateTint="@android:color/white"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        local:layout_constraintTop_toTopOf="@id/ResetPasswordButton"
+        local:layout_constraintBottom_toBottomOf="@id/ResetPasswordButton"
+        local:layout_constraintStart_toStartOf="@id/ResetPasswordButton"
+        local:layout_constraintEnd_toEndOf="@id/ResetPasswordButton"
+        />
+</android.support.constraint.ConstraintLayout>
+
+
