--- a/Toggl.Giskard/Resources/layout/EditProjectActivity.axml
+++ b/Toggl.Giskard/Resources/layout/EditProjectActivity.axml
@@ -24,7 +24,6 @@
                 android:layout_centerVertical="true" />
             <EditText
                 android:id="@+id/EditProjectProjectName"
-                local:MvxBind="Text Name; TopMargin EditProjectErrorOffset(IsNameAlreadyTaken)"
                 android:lines="1"
                 android:gravity="left"
                 android:textSize="15sp"
@@ -39,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="40dp" />
             <TextView
-                local:MvxBind="Visibility Visibility(IsNameAlreadyTaken)"
+                android:id="@+id/ErrorText"
                 android:textSize="12sp"
                 android:lineSpacingExtra="4sp"
                 android:textColor="@color/errorText"
@@ -58,7 +57,6 @@
                 android:layout_alignParentBottom="true" />
             <toggl.giskard.views.CircleView
                 android:id="@+id/EditProjectColorCircle"
-                local:MvxBind="CircleColor NativeColor(Color); Click PickColorCommand"
                 android:clickable="true"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
@@ -67,7 +65,6 @@
                 android:layout_toLeftOf="@+id/EditProjectColorArrow" />
             <ImageView
                 android:id="@+id/EditProjectColorArrow"
-                local:MvxBind="Click PickColorCommand"
                 android:clickable="true"
                 android:src="@drawable/dropdown"
                 android:layout_marginRight="16dp"
@@ -82,7 +79,7 @@
             android:layout_marginLeft="55dp"
             android:layout_width="match_parent" />
         <RelativeLayout
-            local:MvxBind="Click PickWorkspaceCommand"
+            android:id="@+id/EditWorkspace"
             android:clickable="true"
             android:background="?attr/selectableItemBackground"
             android:layout_height="48dp"
@@ -98,7 +95,7 @@
                 android:layout_centerVertical="true"
                 android:layout_below="@+id/EditProjectProjectImage" />
             <TextView
-                local:MvxBind="Text WorkspaceName"
+                android:id="@+id/WorkspaceNameLabel"
                 android:lines="1"
                 android:textSize="15sp"
                 android:singleLine="true"
@@ -133,7 +130,7 @@
             android:layout_marginLeft="55dp"
             android:layout_width="match_parent" />
         <RelativeLayout
-            local:MvxBind="Click PickClientCommand"
+            android:id="@+id/EditClientView"
             android:clickable="true"
             android:background="?attr/selectableItemBackground"
             android:layout_height="48dp"
@@ -149,7 +146,7 @@
                 android:layout_centerVertical="true"
                 android:layout_below="@id/EditProjectWorkspaceImage" />
             <TextView
-                local:MvxBind="Text If(ClientName, ClientName, 'No Client'); TextColor ARGB(If(ClientName, '#000000', '#CECECE'))"
+                android:id="@+id/ClientNameTextView"
                 android:lines="1"
                 android:textSize="15sp"
                 android:singleLine="true"
@@ -185,7 +182,7 @@
             android:layout_marginLeft="55dp"
             android:layout_width="match_parent" />
         <RelativeLayout
-            local:MvxBind="Click TogglePrivateProjectCommand"
+            android:id="@+id/ToggleIsPrivateView"
             android:clickable="true"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
@@ -232,7 +229,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true" />
             <Switch
-                local:MvxBind="Checked IsPrivate"
+	            android:id="@+id/IsPrivateSwitch"
                 android:layout_marginRight="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
