--- a/Toggl.Daneel/Views/EntityCreation/CreateEntityViewCell.xib
+++ b/Toggl.Daneel/Views/EntityCreation/CreateEntityViewCell.xib
@@ -11,37 +11,37 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="44" id="cxk-wN-pdQ" customClass="CreateEntityViewcell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="44" id="cxk-wN-pdQ" customClass="CreateEntityViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cxk-wN-pdQ" id="YTl-1W-gDM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HWU-o6-OmI">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5dX-Pl-R9i">
                         <rect key="frame" x="16" y="22" width="0.0" height="0.0"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nJb-ni-XtT">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3YA-do-ifW">
                         <rect key="frame" x="0.0" y="42.5" width="320" height="1"/>
                         <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="1" id="lKw-Bo-J04"/>
+                            <constraint firstAttribute="height" constant="1" id="loe-0e-w0L"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="HWU-o6-OmI" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" constant="16" id="BWU-wP-n2u"/>
-                    <constraint firstItem="nJb-ni-XtT" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" id="aoU-U9-58M"/>
-                    <constraint firstAttribute="bottom" secondItem="nJb-ni-XtT" secondAttribute="bottom" id="bDe-38-wsY"/>
-                    <constraint firstAttribute="trailing" secondItem="nJb-ni-XtT" secondAttribute="trailing" id="qqc-G2-Nb3"/>
-                    <constraint firstItem="HWU-o6-OmI" firstAttribute="centerY" secondItem="YTl-1W-gDM" secondAttribute="centerY" id="xbe-H5-8iB"/>
+                    <constraint firstItem="5dX-Pl-R9i" firstAttribute="centerY" secondItem="YTl-1W-gDM" secondAttribute="centerY" id="LWJ-CT-C8T"/>
+                    <constraint firstAttribute="trailing" secondItem="3YA-do-ifW" secondAttribute="trailing" id="Uw0-Kr-3gO"/>
+                    <constraint firstItem="3YA-do-ifW" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" id="VFH-XT-b8j"/>
+                    <constraint firstAttribute="bottom" secondItem="3YA-do-ifW" secondAttribute="bottom" id="eOD-b1-szp"/>
+                    <constraint firstItem="5dX-Pl-R9i" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" constant="16" id="yKn-tx-prG"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="TextLabel" destination="HWU-o6-OmI" id="sCh-9w-YSJ"/>
+                <outlet property="TextLabel" destination="5dX-Pl-R9i" id="980-ks-5dg"/>
             </connections>
         </tableViewCell>
     </objects>
