--- a/Toggl.Daneel/ViewControllers/SignupViewController.xib
+++ b/Toggl.Daneel/ViewControllers/SignupViewController.xib
@@ -39,6 +39,7 @@
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="Mjk-wm-alH">
                     <rect key="frame" x="68.5" y="20" width="183" height="40"/>
+                    <accessibility key="accessibilityConfiguration" label="CountryButton"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="7vV-YN-hhR"/>
                     </constraints>
