--- a/Toggl.Giskard/Resources/layout/SettingsFragment.axml
+++ b/Toggl.Giskard/Resources/layout/SettingsFragment.axml
@@ -423,6 +423,34 @@
                 android:background="@color/separator"
                 android:layout_height="0.5dp"
                 android:layout_width="match_parent" />
+            <FrameLayout
+                android:id="@+id/DarkThemeView"
+                android:clickable="true"
+                android:background="?attr/selectableItemBackground"
+                android:layout_height="48dp"
+                android:layout_width="match_parent">
+              <TextView
+                  android:textSize="15sp"
+                  android:textAllCaps="false"
+                  android:lineSpacingExtra="5sp"
+                  android:gravity="center_vertical"
+                  android:textColor="@android:color/black"
+                  android:text="@string/DarkTheme"
+                  android:layout_marginLeft="16dp"
+                  android:layout_width="wrap_content"
+                  android:layout_height="match_parent" />
+              <Switch
+                  android:id="@+id/DarkThemeSwitch"
+                  android:clickable="false"
+                  android:layout_gravity="right"
+                  android:layout_marginRight="18dp"
+                  android:layout_width="wrap_content"
+                  android:layout_height="match_parent" />
+            </FrameLayout>
+            <View
+                android:background="@color/separator"
+                android:layout_height="0.5dp"
+                android:layout_width="match_parent" />
             <TextView
                 android:id="@+id/SettingsSubmitFeedbackButton"
                 android:textSize="15sp"
