--- a/Toggl.Giskard/Resources/layout/AboutActivity.axml
+++ b/Toggl.Giskard/Resources/layout/AboutActivity.axml
@@ -17,7 +17,6 @@
         android:textSize="15sp"
         android:clickable="true"
         android:focusable="true"
-        android:visibility="gone"
         android:paddingLeft="16dp"
         android:textAllCaps="false"
         android:gravity="center_vertical"
@@ -28,7 +27,7 @@
         android:layout_marginTop="12dp"
         android:layout_width="match_parent" />
     <View
-        android:visibility="gone"
+        android:id="@+id/LicensesSeparator"
         android:background="@color/separator"
         android:layout_height="0.5dp"
         android:layout_width="match_parent" />
@@ -47,6 +46,7 @@
         android:layout_marginTop="12dp"
         android:layout_width="match_parent" />
     <View
+        android:id="@+id/PrivacyPolicySeparator"
         android:background="@color/separator"
         android:layout_height="0.5dp"
         android:layout_width="match_parent" />
@@ -63,7 +63,8 @@
         android:background="?attr/selectableItemBackground"
         android:layout_height="48dp"
         android:layout_width="match_parent" />
-    <View
+  <View
+      android:id="@+id/TermsOfServiceSeparator"
         android:background="@color/separator"
         android:layout_height="0.5dp"
         android:layout_width="match_parent" />
