--- a/Toggl.Giskard/Resources/layout/MainLogCell.axml
+++ b/Toggl.Giskard/Resources/layout/MainLogCell.axml
@@ -191,6 +191,7 @@
             android:layout_width="70dp"
             android:layout_height="70dp" />
         <View
+            android:id="@+id/Separator"
             android:background="@color/separator"
             local:layout_constraintBottom_toBottomOf="parent"
             android:layout_height="0.5dp"
