--- a/Toggl.Giskard/Resources/layout/MainRunningTimeEntry.axml
+++ b/Toggl.Giskard/Resources/layout/MainRunningTimeEntry.axml
@@ -15,7 +15,6 @@
         android:layout_width="wrap_content" />
     <View
         android:id="@+id/MainContentArea"
-        android:background="@android:color/white"
         local:layout_constraintLeft_toLeftOf="parent"
         local:layout_constraintRight_toRightOf="parent"
         local:layout_constraintBottom_toBottomOf="parent"
@@ -106,6 +105,7 @@
         android:layout_marginBottom="16dp"
         android:layout_height="wrap_content" />
     <View
+        android:id="@+id/RunningTimeEntryGradient"
         local:layout_constraintRight_toRightOf="parent"
         local:layout_constraintBottom_toBottomOf="parent"
         local:layout_constraintTop_toBottomOf="@id/guideline"
@@ -120,6 +120,7 @@
         android:layout_width="0dp"
         android:layout_height="8dp" />
     <View
+        android:id="@+id/TopSeparator"
         android:background="@color/separator"
         local:layout_constraintLeft_toLeftOf="parent"
         local:layout_constraintRight_toRightOf="parent"
@@ -127,6 +128,7 @@
         android:layout_width="0dp"
         android:layout_height="1dp" />
     <View
+        android:id="@+id/BottomSeparator"
         android:background="@color/separator"
         local:layout_constraintLeft_toLeftOf="parent"
         local:layout_constraintRight_toRightOf="parent"
