--- a/Toggl.Giskard/Resources/layout/PomodoroListingFragment.axml
+++ b/Toggl.Giskard/Resources/layout/PomodoroListingFragment.axml
@@ -34,6 +34,10 @@
         android:layout_marginBottom="12dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <View
+        android:background="#CCC"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/WorkflowListView"
         android:layout_width="match_parent"
