--- a/Toggl.Giskard/Resources/layout/MainLogCell.axml
+++ b/Toggl.Giskard/Resources/layout/MainLogCell.axml
@@ -36,6 +36,7 @@
         android:layout_height="match_parent" />
     <android.support.constraint.ConstraintLayout
         android:id="@+id/MainLogContentView"
+        android:background="?attr/appCellBackgroundColor"
         android:elevation="1dp"
         android:layout_height="72dp"
         android:layout_width="match_parent">
@@ -80,7 +81,7 @@
             android:ellipsize="end"
             android:textSize="15sp"
             local:layout_goneMarginBottom="8dp"
-            android:textColor="@android:color/black"
+            android:textColor="?attr/appTextColor"
             tools:text="Exporting assets to Zeplin and organizing"
             local:layout_constraintVertical_chainStyle="packed"
             local:layout_constraintTop_toBottomOf="@id/TopGuideline"
@@ -215,7 +216,7 @@
             android:layout_height="70dp" />
         <View
             android:id="@+id/Separator"
-            android:background="@color/separator"
+            android:background="?attr/appSeparatorColor"
             local:layout_constraintBottom_toBottomOf="parent"
             android:layout_height="0.5dp"
             android:layout_width="match_parent" />
