--- a/Toggl.Giskard/Resources/layout/MainSuggestionsCardDescriptionOnly.axml
+++ b/Toggl.Giskard/Resources/layout/MainSuggestionsCardDescriptionOnly.axml
@@ -4,6 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     app:cardUseCompatPadding="true"
     tools:layout_height="60dp"
+    app:cardBackgroundColor="?attr/appCardColor"
     android:layout_width="wrap_content"
     android:layout_height="64dp">
     <RelativeLayout
@@ -16,7 +17,7 @@
             android:id="@+id/TimeEntriesLogCellDescriptionLabel"
             android:maxLines="1"
             android:textSize="15sp"
-            android:textColor="@android:color/black"
+            android:textColor="?attr/appTextColor"
             tools:text="Exporting assets to Zeplin and organizing"
             android:layout_marginLeft="12dp"
             android:layout_centerVertical="true"
