--- a/Toggl.Giskard/Resources/layout/MainSuggestionsCardDescriptionOnly.axml
+++ b/Toggl.Giskard/Resources/layout/MainSuggestionsCardDescriptionOnly.axml
@@ -2,6 +2,7 @@
 <android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/CardView"
     app:cardUseCompatPadding="true"
     tools:layout_height="60dp"
     android:layout_width="wrap_content"
